--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+.custom-background-primary {
   background: linear-gradient(
     134deg,
     theme('colors.primary.500') 8.33%,
     theme('colors.black') 97.92%
   );
+  background-repeat: no-repeat;
 }
